--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <meta name="author" content="harrnish">
+      <meta name="author" content="omwani">
 
-      <title>Portfolio Website Template | CODEGRID</title>
+      <title>Home</title>
 
       <!-- stylesheet -->
       <link rel="stylesheet" href="style.css">
@@ -65,7 +65,7 @@
             <!--------------- hero section starts here --------------->
             <div class="hero">
                   <div class="header">
-                        <h1 class="line anim-typewriter">I make brands matter in culture.</h1>
+                        <h1 class="line anim-typewriter">Hey, I am Om Wani and I have fun</h1>
                   </div>
             </div>
 
@@ -134,7 +134,7 @@
                         <div class="collab">
                               <div class="row">
                                     <div class="col-lg-12">
-                                          <p class="wow fadeInUp">Got an interesting project? I can help you.</p>
+                                          <p class="wow fadeInUp">Got an idea? Is it fun? LET'S DO IT!</p>
                                     </div>
                               </div>
                         </div>
@@ -170,7 +170,7 @@
 
                                     <div class="col-lg-4" id="address">
                                           <p class="wow fadeInUp" data-wow-delay="0s">say hello</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">harrnish@gmail.com</h4>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">omwani03@gmail.com</h4>
                                           <br><br>
                                     </div>
                               </div>
