--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <meta name="author" content="omwani">
 
-      <title>Home</title>
+      <title>Home | OMWANI</title>
 
       <!-- stylesheet -->
       <link rel="stylesheet" href="style.css">
@@ -32,7 +32,7 @@
             <!--------------- navbar starts here --------------->
             <nav>
                   <span id="brand">
-                        <a href="index.html">harrnish</a>
+                        <a href="index.html">omwani</a>
                   </span>
 
                   <ul id="menu">
@@ -78,7 +78,7 @@
             <div class="container-fluid">
                   <br><br><br>
 
-                  <h6>Selected projects</h6>
+                  <h6>Fun Things I did.</h6>
 
                   <div class="vertical"></div>
                   <br>
@@ -134,7 +134,7 @@
                         <div class="collab">
                               <div class="row">
                                     <div class="col-lg-12">
-                                          <p class="wow fadeInUp">Got an idea? Is it fun? LET'S DO IT!</p>
+                                          <p class="wow fadeInUp">Got an idea? Is it fun? <b>LET'S DO IT!</b></p>
                                     </div>
                               </div>
                         </div>
@@ -151,7 +151,7 @@
                               <div class="row">
                                     <div class="col-lg-4" id="personal">
                                           <p class="wow fadeInUp">connect with me</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @harrnish</h4>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @ordinaryom</h4>
                                           <br><br>
                                     </div>
 
