--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
                   <ul id="menu">
                         <li><a href="index.html">home<span>.</span></a></li>
-                        <li><a href="work.html">work<span>.</span></a></li>
-                        <li><a href="about.html">about me<span>.</span></a></li>
+                        <li><a href="work.html">things-I-did<span>.</span></a></li>
+                        <li><a href="about.html">about-me<span>.</span></a></li>
                         <li><a href="contact.html">contact<span>.</span></a></li>
                   </ul>
             </div>
@@ -65,7 +65,7 @@
             <!--------------- hero section starts here --------------->
             <div class="hero">
                   <div class="header">
-                        <h1 class="line anim-typewriter">Hey, I am Om Wani and I have fun</h1>
+                        <h1 class="line anim-typewriter">Hey, I am Om Wani and I have fun.</h1>
                   </div>
             </div>
 
