--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
                   <ul id="menu">
                         <li><a href="index.html">home<span>.</span></a></li>
-                        <li><a href="work.html">work<span>.</span></a></li>
-                        <li><a href="about.html">about me<span>.</span></a></li>
+                        <li><a href="work.html">things-i-did<span>.</span></a></li>
+                        <li><a href="about.html">about-me<span>.</span></a></li>
                         <li><a href="contact.html">contact<span>.</span></a></li>
                   </ul>
 
@@ -53,7 +53,7 @@
 
                   <ul id="menu">
                         <li><a href="index.html">home<span>.</span></a></li>
-                        <li><a href="work.html">things-I-did<span>.</span></a></li>
+                        <li><a href="work.html">things-i-did<span>.</span></a></li>
                         <li><a href="about.html">about-me<span>.</span></a></li>
                         <li><a href="contact.html">contact<span>.</span></a></li>
                   </ul>
