--- a/about.html
+++ b/about.html
@@ -4,9 +4,9 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <meta name="author" content="harrnish">
+      <meta name="author" content="omwani">
 
-      <title>About Me | Portfolio Website Template | CODEGRID</title>
+      <title>About Me | OMWANI</title>
 
       <!-- stylesheet -->
       <link rel="stylesheet" href="style.css">
@@ -29,13 +29,13 @@
             <!--------------- navbar starts here --------------->
             <nav>
                   <span id="brand">
-                        <a href="index.html">harrnish</a>
+                        <a href="index.html">omwani</a>
                   </span>
 
                   <ul id="menu">
                         <li><a href="index.html">home<span>.</span></a></li>
-                        <li><a href="work.html">work<span>.</span></a></li>
-                        <li><a href="about.html">about me<span>.</span></a></li>
+                        <li><a href="work.html">things-i-did<span>.</span></a></li>
+                        <li><a href="about.html">about-me<span>.</span></a></li>
                         <li><a href="contact.html">contact<span>.</span></a></li>
                   </ul>
 
@@ -50,8 +50,8 @@
 
                   <ul id="menu">
                         <li><a href="index.html">home<span>.</span></a></li>
-                        <li><a href="work.html">work<span>.</span></a></li>
-                        <li><a href="about.html">about me<span>.</span></a></li>
+                        <li><a href="work.html">things-i-did<span>.</span></a></li>
+                        <li><a href="about.html">about-me<span>.</span></a></li>
                         <li><a href="contact.html">contact<span>.</span></a></li>
                   </ul>
             </div>
@@ -97,7 +97,7 @@
                         <div class="collab">
                               <div class="row">
                                     <div class="col-lg-12">
-                                          <p class="wow fadeInUp">Got an interesting project? I can help you.</p>
+                                          <p class="wow fadeInUp">Have an idea? Is it fun? <b>LET'S DO IT!</b></p>
                                     </div>
                               </div>
                         </div>
@@ -114,7 +114,7 @@
                               <div class="row">
                                     <div class="col-lg-4" id="personal">
                                           <p class="wow fadeInUp">connect with me</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @harrnish</h4>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @ordinaryom</h4>
                                           <br><br>
                                     </div>
 
@@ -133,7 +133,7 @@
 
                                     <div class="col-lg-4" id="address">
                                           <p class="wow fadeInUp" data-wow-delay="0s">say hello</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">harrnish@gmail.com</h4>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">omwani03@gmail.com</h4>
                                           <br><br>
                                     </div>
                               </div>
