--- a/project2.html
+++ b/project2.html
@@ -124,10 +124,10 @@
             <div class="project-nav">
                   <div class="container">
                         <div class="row">
-                              <div class="col-lg-6 prev">
+                              <div class="col-lg-6 prev" onclick="location.href='project1.html'">
                                     <p><ion-icon name="arrow-back"></ion-icon>previous</p>
                               </div>
-                              <div class="col-lg-6 next">
+                              <div class="col-lg-6 next" onclick="location.href='project3.html'">
                                     <p>next<ion-icon name="arrow-forward"></ion-icon></p>
                               </div>
                         </div>
@@ -147,7 +147,7 @@
                         <div class="collab">
                               <div class="row">
                                     <div class="col-lg-12">
-                                          <p class="wow fadeInUp">Got an interesting project? I can help you.</p>
+                                          <p class="wow fadeInUp">Got an idea? Is it fun? <b>LET'S DO IT!</b></p>
                                     </div>
                               </div>
                         </div>
