--- a/project4.html
+++ b/project4.html
@@ -124,10 +124,10 @@
             <div class="project-nav">
                   <div class="container">
                         <div class="row">
-                              <div class="col-lg-6 prev">
+                              <div class="col-lg-6 prev" onclick="location.href='project3.html'">
                                     <p><ion-icon name="arrow-back"></ion-icon>previous</p>
                               </div>
-                              <div class="col-lg-6 next">
+                              <div class="col-lg-6 next" onclick="location.href='project1.html'">
                                     <p>next<ion-icon name="arrow-forward"></ion-icon></p>
                               </div>
                         </div>
@@ -147,7 +147,7 @@
                         <div class="collab">
                               <div class="row">
                                     <div class="col-lg-12">
-                                          <p class="wow fadeInUp">Got an interesting project? I can help you.</p>
+                                          <p class="wow fadeInUp">Got an idea? Is it fun? <b>LET'S DO IT!</b></p>
                                     </div>
                               </div>
                         </div>
@@ -164,7 +164,7 @@
                               <div class="row">
                                     <div class="col-lg-4" id="personal">
                                           <p class="wow fadeInUp">connect with me</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @harrnish</h4>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @ordinaryom</h4>
                                           <br><br>
                                     </div>
 
@@ -183,7 +183,7 @@
 
                                     <div class="col-lg-4" id="address">
                                           <p class="wow fadeInUp" data-wow-delay="0s">say hello</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">harrnish@gmail.com</h4>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">omwani03@gmail.com</h4>
                                           <br><br>
                                     </div>
                               </div>
