--- a/index.html
+++ b/index.html
@@ -1,232 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <meta name="author" content="omwani">
-
-      <title>Home | OMWANI</title>
-
-      <!-- stylesheet -->
-      <link rel="stylesheet" href="style.css">
-
-      <!-- bootstrap cdns -->
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-
-      <!-- google fonts -->
-      <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:100,100i,300,300i,400,400i,500,500i,700,700i" rel="stylesheet">
-
-      <!-- terminal effect -->
-      <script src="t.min.js"></script>
-
-      <!-- for on scroll animations -->
-      <link rel="stylesheet" href="animate.css">
-      <script src="wow.min.js"></script>
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/favicon32x32.png">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
+    <title>Om Wani</title>
 </head>
 <body>
-      <div class="wrapper">
-
-            <!--------------- navbar starts here --------------->
-            <nav>
-                  <span id="brand">
-                        <a href="index.html">omwani</a>
-                  </span>
-
-                  <ul id="menu">
-                        <li><a href="index.html">home<span>.</span></a></li>
-                        <li><a href="work.html">things-i-did<span>.</span></a></li>
-                        <li><a href="about.html">about-me<span>.</span></a></li>
-                        <li><a href="contact.html">contact<span>.</span></a></li>
-                  </ul>
-
-                  <div id="toggle">
-                        <div class="span">menu</div>
-                  </div>
-
-            </nav>
-
-            <div id="resize">
-                  <div class="close-btn">close</div>
-
-                  <ul id="menu">
-                        <li><a href="index.html">home<span>.</span></a></li>
-                        <li><a href="work.html">things-i-did<span>.</span></a></li>
-                        <li><a href="about.html">about-me<span>.</span></a></li>
-                        <li><a href="contact.html">contact<span>.</span></a></li>
-                  </ul>
-            </div>
-            <!--------------- navbar ends here --------------->
-
-
-
-            <!--------------- hero section starts here --------------->
-            <div class="hero">
-                  <div class="header">
-                        <h1 class="line anim-typewriter">Hey, I am Om Wani and I have fun.</h1>
-                  </div>
-            </div>
-
-            <div class="scroll-down"></div>
-            <!--------------- hero section ends here --------------->
-
-
-
-            <!--------------- projects section starts here --------------->
-            <div class="container-fluid">
-                  <br><br><br>
-
-                  <h6>Fun Things I did.</h6>
-
-                  <div class="vertical"></div>
-                  <br>
-
-                  <div class="whitespace"></div>
-                  <div class="whitespace"></div>
-
-                  <div class="row">
-                        <div class="col-lg-8"></div>
-
-                        <div class="col-lg-4 project project1 wow fadeInUp" onclick="location.href='project.html'"></div>
-                  </div>
-
-                  <div class="whitespace"></div>
-
-                  <div class="row">
-                        <div class="col-lg-6 project project2 wow fadeInUp" onclick="location.href='project.html'"></div>
-
-                        <div class="col-lg-6"></div>
-                  </div>
-
-                  <div class="whitespace"></div>
-
-                  <div class="row">
-                        <div class="col-lg-7"></div>
-
-                        <div class="col-lg-4 project project3 wow fadeInUp" onclick="location.href='project.html'"></div>
-
-                        <div class="col-lg-1"></div>
-                  </div>
-
-                  <div class="whitespace"></div>
-
-                  <div class="row">
-                        <div class="col-lg-1"></div>
-
-                        <div class="col-lg-5 project project4 wow fadeInUp" onclick="location.href='project.html'"></div>
-
-                        <div class="col-lg-6"></div>
-                  </div>
-
-                  <div class="whitespace"></div>
-            </div>
-            <!--------------- projects section ends here --------------->
-
-
-
-            <!--------------- footer starts here --------------->
-            <div class="footer">
-                  <div class="container">
-                        <br><br>
-
-                        <div class="collab">
-                              <div class="row">
-                                    <div class="col-lg-12">
-                                          <p class="wow fadeInUp">Got an idea? Is it fun? <b>LET'S DO IT!</b></p>
-                                    </div>
-                              </div>
-                        </div>
-
-                        <br>
-
-                        <div class="hr">
-                              <div class="row"></div>
-                        </div>
-
-                        <br><br>
-
-                        <div class="info">
-                              <div class="row">
-                                    <div class="col-lg-4" id="personal">
-                                          <p class="wow fadeInUp">connect with me</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @ordinaryom</h4>
-                                          <br><br>
-                                    </div>
-
-                                    <div class="col-lg-4" id="media">
-                                          <p class="wow fadeInUp" data-wow-delay="0s">follow me</p>
-
-                                          <ul>
-                                                <li id="fb" class="wow fadeInUp" data-wow-delay="0.4s">fb</li>
-                                                <li id="ig" class="wow fadeInUp" data-wow-delay="0.6s">ig</li>
-                                                <li id="tw" class="wow fadeInUp" data-wow-delay="0.8s">tw</li>
-                                                <li id="yt" class="wow fadeInUp" data-wow-delay="1s">yt</li>
-                                          </ul>
-
-                                          <br><br>
-                                    </div>
-
-                                    <div class="col-lg-4" id="address">
-                                          <p class="wow fadeInUp" data-wow-delay="0s">say hello</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">omwani03@gmail.com</h4>
-                                          <br><br>
-                                    </div>
-                              </div>
-                        </div>
-                  </div>
-            </div>
-            <!--------------- footer ends here --------------->
-
-            <br><br><br><br>
-
-      </div>
-
-      <!-- greensock cdn -->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
-
-      <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-      <script type="text/javascript">
-
-      // navigation starts here
-
-      $("#toggle").click(function() {
-            $(this).toggleClass('on');
-            $("#resize").toggleClass("active");
-      });
-
-      $("#resize ul li a").click(function() {
-            $(this).toggleClass('on');
-            $("#resize").toggleClass("active");
-      });
-
-      $(".close-btn").click(function() {
-            $(this).toggleClass('on');
-            $("#resize").toggleClass("active");
-      });
-
-      // navigation ends here
-
-      // nav animation
-
-      TweenMax.from("#brand", 1, {
-            delay: 0.4,
-            y: 10,
-            opacity: 0,
-            ease: Expo.easeInOut
-      })
-
-      TweenMax.staggerFrom("#menu li a", 1, {
-            delay: 0.4,
-            opacity: 0,
-            ease: Expo.easeInOut
-      }, 0.1);
-
-      // nav animation ends
-
-      new WOW().init();
-
-      </script>
+    <div>
+        <p class="header"><a href="/new-index.html">OM WANI</a></p>
+    </div>
+    <hr>
+    <div><h1>PROJECTS</h1></div>
+    <div class="container1">
+        <div>
+            <img src="/test.jpg" alt="test image" srcset="">
+            <p class="title"><a href="https://www.github.com/om-wani/snake-game-in-js" target="_blank">SNAKE GAME IN JS</a></p>
+            <p class="con1">Lorem ipsum d olor sit amet, consectetur adipiscing elit. Curabitur ut massa quam. Nulla finibus neque quis urna pharetra, vel tempus diam mollis. Nunc ex velit, congue vel fermentum nec, tempor et libero. Pellentesque ut diam auctor, tristique sem eget, viverra quam. Quisque auctor congue elit ut mattis. Proin in ipsum scelerisque, pharetra nibh a, sagittis risus. Ut congue pellentesque massa, a iaculis orci congue ut. Sed eu quam eu magna congue tempor.</p>
+        </div>
+    </div>
+    <div class="container1">
+        <div>
+            <img src="/test1.jpg" alt="test image" srcset="">
+            <p class="title"><a href="https://www.github.com/om-wani/snake-game-in-js" target="_blank">SNAKE GAME IN JS</a></p>
+            <p class="con1">Lorem ipsum d olor sit amet, consectetur adipiscing elit. Curabitur ut massa quam. Nulla finibus neque quis urna pharetra, vel tempus diam mollis. Nunc ex velit, congue vel fermentum nec, tempor et libero. Pellentesque ut diam auctor, tristique sem eget, viverra quam. Quisque auctor congue elit ut mattis. Proin in ipsum scelerisque, pharetra nibh a, sagittis risus. Ut congue pellentesque massa, a iaculis orci congue ut. Sed eu quam eu magna congue tempor.</p>
+        </div>
+    </div>
+    <div class="container1">
+        <div>
+            <img src="/test.jpg" alt="test image" srcset="">
+            <p class="title"><a href="https://www.github.com/om-wani/snake-game-in-js" target="_blank">SNAKE GAME IN JS</a></p>
+            <p class="con1">Lorem ipsum d olor sit amet, consectetur adipiscing elit. Curabitur ut massa quam. Nulla finibus neque quis urna pharetra, vel tempus diam mollis. Nunc ex velit, congue vel fermentum nec, tempor et libero. Pellentesque ut diam auctor, tristique sem eget, viverra quam. Quisque auctor congue elit ut mattis. Proin in ipsum scelerisque, pharetra nibh a, sagittis risus. Ut congue pellentesque massa, a iaculis orci congue ut. Sed eu quam eu magna congue tempor.</p>
+        </div>
+    </div>
+    <div class="container1">
+        <div>
+            <img src="/test1.jpg" alt="test image" srcset="">
+            <p class="title"><a href="https://www.github.com/om-wani/snake-game-in-js" target="_blank">SNAKE GAME IN JS</a></p>
+            <p class="con1">Lorem ipsum d olor sit amet, consectetur adipiscing elit. Curabitur ut massa quam. Nulla finibus neque quis urna pharetra, vel tempus diam mollis. Nunc ex velit, congue vel fermentum nec, tempor et libero. Pellentesque ut diam auctor, tristique sem eget, viverra quam. Quisque auctor congue elit ut mattis. Proin in ipsum scelerisque, pharetra nibh a, sagittis risus. Ut congue pellentesque massa, a iaculis orci congue ut. Sed eu quam eu magna congue tempor.</p>
+        </div>
+    </div>
+    <div class="container2">
+        <div>
+            <p><a href="http://linkedin.com/in/omwani" target="_blank" rel="noopener noreferrer">linkedin.com/omwani</a></p>
+            <p><a href="http://instagram.com/omwani.dev" target="_blank" rel="noopener noreferrer">instagram.com/omwani.dev</a></p>
+            <p><a href="http://twitter.com/omwani03" target="_blank" rel="noopener noreferrer">twitter.com/omwani03</a></p>
+            <p><a href="mailto:omwani03+go@gmail.com" target="_blank">omwani03@gmail.com</a></p>
+        </div>
+    </div>
 </body>
 </html>
