--- a/index.html
+++ b/index.html
@@ -21,28 +21,28 @@
     <div><h1>PROJECTS</h1></div>
     <div class="container1">
         <div>
-            <img src="/test.jpg" alt="test image" srcset="">
+            <img src="/go/test.jpg" alt="test image" srcset="">
             <p class="title"><a href="https://www.github.com/om-wani/snake-game-in-js" target="_blank">SNAKE GAME IN JS</a></p>
             <p class="con1">Lorem ipsum d olor sit amet, consectetur adipiscing elit. Curabitur ut massa quam. Nulla finibus neque quis urna pharetra, vel tempus diam mollis. Nunc ex velit, congue vel fermentum nec, tempor et libero. Pellentesque ut diam auctor, tristique sem eget, viverra quam. Quisque auctor congue elit ut mattis. Proin in ipsum scelerisque, pharetra nibh a, sagittis risus. Ut congue pellentesque massa, a iaculis orci congue ut. Sed eu quam eu magna congue tempor.</p>
         </div>
     </div>
     <div class="container1">
         <div>
-            <img src="/test1.jpg" alt="test image" srcset="">
+            <img src="/go/test1.jpg" alt="test image" srcset="">
             <p class="title"><a href="https://www.github.com/om-wani/snake-game-in-js" target="_blank">SNAKE GAME IN JS</a></p>
             <p class="con1">Lorem ipsum d olor sit amet, consectetur adipiscing elit. Curabitur ut massa quam. Nulla finibus neque quis urna pharetra, vel tempus diam mollis. Nunc ex velit, congue vel fermentum nec, tempor et libero. Pellentesque ut diam auctor, tristique sem eget, viverra quam. Quisque auctor congue elit ut mattis. Proin in ipsum scelerisque, pharetra nibh a, sagittis risus. Ut congue pellentesque massa, a iaculis orci congue ut. Sed eu quam eu magna congue tempor.</p>
         </div>
     </div>
     <div class="container1">
         <div>
-            <img src="/test.jpg" alt="test image" srcset="">
+            <img src="/go/test.jpg" alt="test image" srcset="">
             <p class="title"><a href="https://www.github.com/om-wani/snake-game-in-js" target="_blank">SNAKE GAME IN JS</a></p>
             <p class="con1">Lorem ipsum d olor sit amet, consectetur adipiscing elit. Curabitur ut massa quam. Nulla finibus neque quis urna pharetra, vel tempus diam mollis. Nunc ex velit, congue vel fermentum nec, tempor et libero. Pellentesque ut diam auctor, tristique sem eget, viverra quam. Quisque auctor congue elit ut mattis. Proin in ipsum scelerisque, pharetra nibh a, sagittis risus. Ut congue pellentesque massa, a iaculis orci congue ut. Sed eu quam eu magna congue tempor.</p>
         </div>
     </div>
     <div class="container1">
         <div>
-            <img src="/test1.jpg" alt="test image" srcset="">
+            <img src="/go/test1.jpg" alt="test image" srcset="">
             <p class="title"><a href="https://www.github.com/om-wani/snake-game-in-js" target="_blank">SNAKE GAME IN JS</a></p>
             <p class="con1">Lorem ipsum d olor sit amet, consectetur adipiscing elit. Curabitur ut massa quam. Nulla finibus neque quis urna pharetra, vel tempus diam mollis. Nunc ex velit, congue vel fermentum nec, tempor et libero. Pellentesque ut diam auctor, tristique sem eget, viverra quam. Quisque auctor congue elit ut mattis. Proin in ipsum scelerisque, pharetra nibh a, sagittis risus. Ut congue pellentesque massa, a iaculis orci congue ut. Sed eu quam eu magna congue tempor.</p>
         </div>
