--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="/favicon32x32.png">
+    <link rel="icon" type="image/x-icon" href="/go/favicon32x32.png">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div>
-        <p class="header"><a href="/new-index.html">OM WANI</a></p>
+        <p class="header"><a href="index.html">OM WANI</a></p>
     </div>
     <hr>
     <div><h1>PROJECTS</h1></div>
