--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <p class="header"><a href="index.html">OM WANI</a></p>
     </div>
     <hr>
+    <!--
     <div><h1>PROJECTS</h1></div>
     <div class="container1">
         <div>
@@ -54,6 +55,8 @@
             <p><a href="http://twitter.com/omwani03" target="_blank" rel="noopener noreferrer">twitter.com/omwani03</a></p>
             <p><a href="mailto:omwani03+go@gmail.com" target="_blank">omwani03@gmail.com</a></p>
         </div>
-    </div>
+    </div>-->
+    <a href="https://om-wani.github.io/snake-game-in-js">
+        <button>View the Snake Game</button></a>
 </body>
 </html>
