--- a/index.html
+++ b/index.html
@@ -5,19 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/go/favicon32x32.png">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abel&family=Bebas+Neue&family=Inconsolata:wght@200;300;400;500;600;700;800;900&family=Indie+Flower&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Jura:wght@300;400;500;600;700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Reenie+Beanie&family=Tilt+Warp&display=swap" rel="stylesheet">
+    <!--Abel, Bebas Neue, Inconsolata, Inter, Jura, Monteserrat, Reenie Beanie, Tilt Warp-->
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
-    <title>Om Wani</title>
+    <title>Om Wani | om03.site</title>
 </head>
 <body>
-    <div>
-        <p class="header"><a href="index.html">OM WANI</a></p>
-    </div>
-    <hr>
+	<!--<p class="title">OM WANI</p>-->
+	<div>
+	
+	<!--<div class="pfp"><img src="img3.jpg"></div>-->
     <!--
     <div><h1>PROJECTS</h1></div>
     <div class="container1">
@@ -56,7 +54,17 @@
             <p><a href="mailto:omwani03+go@gmail.com" target="_blank">omwani03@gmail.com</a></p>
         </div>
     </div>-->
-    <a href="https://om-wani.github.io/snake-game-in-js">
-        <button>View the Snake Game</button></a>
+    
+    <div class="links-navbar" id="links-navbar">
+    	<p class="home"><a href="https://om03.site">OM WANI</a></p>
+    	<p class="space">                       </p>
+    	<p class="snake-game"><a href="/snake-game/index.html/" target="_blank">SNAKE GAME IN JS</a></p>
+    	<p class="github"><a href="https://github.com/om-wani/" target="_blank">MY GITHUB</a></p>
+    	<p class="linkedin"><a href="https://linkedin.com/in/omwani/" target="_blank">MY LINKEDIN</a></p>
+    	<p class="instagram"><a href="https://instagram.com/omwani.dev/" target="_blank">MY INSTAGRAM</a></p>
+    	<p class="mail-me">MAIL ME AT <a href="mailto:theordinaryom@gmail.com"><i>'theordinaryom@gmail.com'</i></a></p>
+    	<!--add the above element/ links inside the ordered and unordered lists-->
+    </div>
+    </div>
 </body>
 </html>
