--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="/go/favicon32x32.png">
+    <link rel="icon" type="image/x-icon" href="/om03.site/favicon32x32.png">
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Bebas+Neue&family=Inconsolata:wght@200;300;400;500;600;700;800;900&family=Indie+Flower&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Jura:wght@300;400;500;600;700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Reenie+Beanie&family=Tilt+Warp&display=swap" rel="stylesheet">
     <!--Abel, Bebas Neue, Inconsolata, Inter, Jura, Monteserrat, Reenie Beanie, Tilt Warp-->
     <link rel="stylesheet" href="styles.css">
