--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="links-navbar" id="links-navbar">
     	<p class="home"><a href="https://om03.site">OM WANI</a></p>
     	<p class="space">                       </p>
-    	<p class="snake-game"><a href="/snake-game/index.html/" target="_blank">SNAKE GAME IN JS</a></p>
+    	<p class="snake-game"><a href="https://om03.site/snake-game/snake-game.html/" target="_blank">SNAKE GAME IN JS</a></p>
     	<p class="github"><a href="https://github.com/om-wani/" target="_blank">MY GITHUB</a></p>
     	<p class="linkedin"><a href="https://linkedin.com/in/omwani/" target="_blank">MY LINKEDIN</a></p>
     	<p class="instagram"><a href="https://instagram.com/omwani.dev/" target="_blank">MY INSTAGRAM</a></p>
