--- a/snake-game.html
+++ b/snake-game.html
@@ -17,7 +17,7 @@
     <div>
     <h1>
     <div class="names">Snake Game by</div>
-        <i>@omwani.dev</i>
+        <a href="https://om03.site/"><i>@omwani.dev</i></a>
     </h1>
     <p class="instr">-------------------------------------------------------------------------</p>
     <canvas id="canvas"></canvas>
