--- a/snake-game.html
+++ b/snake-game.html
@@ -45,6 +45,12 @@
             font-weight: bold;
             color: #15e34d;
         }
+        
+        a {
+            text-decoration:none;
+            color: #15e34d;
+        }
+        
         .border {
             border: 10px;
             color: #16e34d;
