--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     	<p class="github"><a href="https://github.com/om-wani/" target="_blank">MY GITHUB</a></p>
     	<p class="linkedin"><a href="https://linkedin.com/in/omwani/" target="_blank">MY LINKEDIN</a></p>
     	<p class="instagram"><a href="https://instagram.com/omwani.dev/" target="_blank">MY INSTAGRAM</a></p>
-    	<p class="mail-me">MAIL ME AT <a href="mailto:theordinaryom@gmail.com"><i>'theordinaryom@gmail.com'</i></a></p>
+    	<p class="mail-me">MAIL ME AT <a href="mailto:omwani03+site@gmail.com"><i>'omwani03@gmail.com'</i></a></p>
     	<!--add the above element/ links inside the ordered and unordered lists-->
     </div>
     </div>
